crates/squote/tests/ui/does-not-have-iter-interpolated-dup.stderr
error[E0308]: mismatched types
 --> $DIR/does-not-have-iter-interpolated-dup.rs:8:5
  |
8 |     quote!(#(#nonrep #nonrep)*);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected struct `quote::__private::HasIterator`, found struct `quote::__private::ThereIsNoIteratorInRepetition`
  |     expected due to this
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
